@@ -1,4 +1,5 @@
 Version 5.6.0 (TBD)
+    Added new `BeforeOpenNotification` and `OpenNotification` events which allow internal notifications to be captured and modified before display #TINY-6528
     Added support for `block` and `unblock` methods on inline dialogs #TINY-6487
     Added new `TableModified` event which is fired whenever changes are made to a table #TINY-6629
     Added new `image_file_types` setting to determine which image file formats will be automatically processed into `img` tags on paste when using the `paste` plugin #TINY-6306
